--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -9,6 +9,16 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Main Metrics
+        uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+      - name: WakaTime
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.wakatime.svg
+          token: NOT_NEEDED
+          base: ""
+          plugin_wakatime: yes
+          plugin_wakatime_sections: time, editors, os
+          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
