feat: Inject GH_TOKEN

--- a/.github/workflows/update-badges.yml
+++ b/.github/workflows/update-badges.yml
@@ -12,4 +12,5 @@ jobs:
       - name: Badges - Readme
         uses: pemtajo/badge-readme@main
         env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           CREDLY_USER: jiho-lee.fbff17e9
